fix spacing of categeories section on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -332,7 +332,7 @@ hr {
   margin-right: auto;
   background-color: #4BB8DD;
   margin-bottom: 100px;
-  padding: 50px 20px 50px 20px;
+  padding: 40px 20px 40px 20px;
   border-radius: 10px;
   width: 90%;
 }
@@ -579,6 +579,15 @@ hr {
     margin-bottom: 25px;
     line-height: 41px;
   }
+
+  .categories_container {
+    flex-direction: column;
+  }
+
+  .categories_text {
+    width: 90%;
+    margin-bottom: 40px;
+  }
 }
 
 @media only screen and (max-width: 700px) {
@@ -693,6 +702,7 @@ hr {
     padding: 0;
     margin-top: 0px;
     margin-bottom: 20px;
+    line-height: 28px;
   }
 
   .intro_container {
@@ -837,6 +847,7 @@ hr {
     width: 85%;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 0px;
     font-size: 18px;
     letter-spacing: .12rem;
     line-height: 26px;
@@ -845,7 +856,7 @@ hr {
   
   .categories_links {
     display: grid;
-    grid-template-columns: 120px 120px;
+    grid-template-columns: 130px 130px;
     justify-content: center;
     row-gap: 2px;
     column-gap: 8px;
